--- a/css/style.css
+++ b/css/style.css
@@ -9305,9 +9305,9 @@ h1, h2, h3, h4 {
     font-size: 1.2rem;
     color: rgba(255, 255, 255, 0.6); }
   .home-section .search-jobs-form .form-control, .home-section .search-jobs-form .btn-lg {
-    height: calc(2em + 1rem + 2px);
+    /*height: calc(2em + 1rem + 2px);
     padding: 0.5rem 1rem;
-    font-size: 1rem;
+    font-size: 1rem;*/
     line-height: 1.5;
     border-radius: 0.3rem; }
   .home-section .search-jobs-form .btn-search > span {
@@ -9730,7 +9730,7 @@ h1, h2, h3, h4 {
     transform: translate(-50%, -50%); }
 
 .popular-keywords h3 {
-  font-size: 1.2rem;
+  /*font-size: 1.2rem;*/
   display: inline-block;
   color: #fff;
   margin-right: .5rem; }
@@ -9746,7 +9746,7 @@ h1, h2, h3, h4 {
       border: 2px solid #fff;
       color: #fff;
       padding: .2rem .7rem;
-      font-size: .7rem;
+      font-size: 1.2rem;
       font-weight: 700;
       text-decoration: none; }
       .popular-keywords .keywords li a:hover {
