--- a/css/dash.css
+++ b/css/dash.css
@@ -6,9 +6,9 @@
     border-left: 0!important;
     border-bottom: 0!important;
 }
-.form-group{
+/*.form-group{
     width: 49%;display: inline-block;
-}
+}*/
 @media (max-width: 767px){
 .LeftNavSideBar .navbar-brand, .LeftNavSideBar .navbar-header {
     display: block;
