--- a/css/style.css
+++ b/css/style.css
@@ -4445,12 +4445,12 @@ button.close {
   right: 0;
   bottom: 0;
   left: 0;
-
+z-index: unset !important;
   background-color: #000; }
   .modal-backdrop.fade {
     opacity: 0; }
   .modal-backdrop.show {
-    opacity: 0.5; }
+    opacity: 0; }
 
 .modal-header {
   display: -webkit-box;
@@ -9295,7 +9295,7 @@ h1, h2, h3, h4 {
     z-index: 2;
     position: relative; }
   .home-section h1 {
-  
+
     color: #fff;
     font-weight: 200; }
     @media (max-width: 991.98px) {
